[gd_scene load_steps=3 format=2]

[ext_resource path="res://Escenas/GUI/GenericPanel3.gd" type="Script" id=1]
[ext_resource path="res://Escenas/GUI/GenericItem.tscn" type="PackedScene" id=2]

[node name="GenericPanel" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.5
margin_right = -1.5
custom_constants/margin_right = 100
custom_constants/margin_top = 20
custom_constants/margin_left = 100
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 20.0
margin_right = 916.0
margin_bottom = 544.0
custom_constants/separation = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 368.0
margin_bottom = 524.0
size_flags_horizontal = 3

[node name="Item1" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_right = 368.0

[node name="mButton" parent="MarginContainer/HBoxContainer/VBoxContainer/Item1" index="0"]
focus_neighbour_right = NodePath("../../../VBoxContainer2/Item4/mButton")

[node name="Item2" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 176.0
margin_right = 368.0
margin_bottom = 348.0

[node name="mButton" parent="MarginContainer/HBoxContainer/VBoxContainer/Item2" index="0"]
focus_neighbour_right = NodePath("../../../VBoxContainer2/Item5/mButton")

[node name="Item3" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 352.0
margin_right = 368.0
margin_bottom = 524.0

[node name="mButton" parent="MarginContainer/HBoxContainer/VBoxContainer/Item3" index="0"]
focus_neighbour_right = NodePath("../../../VBoxContainer2/Item6/mButton")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 448.0
margin_right = 816.0
margin_bottom = 524.0
size_flags_horizontal = 3

[node name="Item4" parent="MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
margin_left = 0.0
margin_right = 368.0

[node name="mButton" parent="MarginContainer/HBoxContainer/VBoxContainer2/Item4" index="0"]
focus_neighbour_left = NodePath("../../../VBoxContainer/Item1/mButton")

[node name="Item5" parent="MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 176.0
margin_right = 368.0
margin_bottom = 348.0

[node name="mButton" parent="MarginContainer/HBoxContainer/VBoxContainer2/Item5" index="0"]
focus_neighbour_left = NodePath("../../../VBoxContainer/Item2/mButton")

[node name="Item6" parent="MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 352.0
margin_right = 368.0
margin_bottom = 524.0

[node name="mButton" parent="MarginContainer/HBoxContainer/VBoxContainer2/Item6" index="0"]
focus_neighbour_left = NodePath("../../../VBoxContainer/Item3/mButton")
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Item1/mButton" to="." method="button1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Item2/mButton" to="." method="button2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Item3/mButton" to="." method="button3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Item4/mButton" to="." method="button4_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Item5/mButton" to="." method="button5_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Item6/mButton" to="." method="button6_pressed"]

[editable path="MarginContainer/HBoxContainer/VBoxContainer/Item1"]

[editable path="MarginContainer/HBoxContainer/VBoxContainer/Item2"]

[editable path="MarginContainer/HBoxContainer/VBoxContainer/Item3"]

[editable path="MarginContainer/HBoxContainer/VBoxContainer2/Item4"]

[editable path="MarginContainer/HBoxContainer/VBoxContainer2/Item5"]

[editable path="MarginContainer/HBoxContainer/VBoxContainer2/Item6"]
